--- a/packs.html
+++ b/packs.html
@@ -28,13 +28,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="packs.html">Packs</a>
+                        <a class="nav-link" href="packs.html">PACKS</a>
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="carrito.html">Carrito</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="contactar.html">Contactar</a>
+                        <a class="nav-link" aria-current="page" href="contactar.html">CONTACTAR</a>
                     </li>
                 </ul>
             </div>
