--- a/contactar.html
+++ b/contactar.html
@@ -27,13 +27,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="packs.html">Packs</a>
+                        <a class="nav-link" href="packs.html">PACKS</a>
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="carrito.html">Carrito</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="contactar.html">Contactar</a>
+                        <a class="nav-link" aria-current="page" href="contactar.html">CONTACTAR</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +50,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Mail</label>
-                        <input type="mail" name="emailCliente" class="form-control" id="exampleInputPassword1">
+                        <input type="email" name="emailCliente" class="form-control" id="exampleInputPassword1">
                     </div>
                     <button id="botonContactar" type="submit" class="btn btn-primary">Enviar</button>
                 </form>
