--- a/contactar.html
+++ b/contactar.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Nivelando</title>
+    <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="contactarJS.js " defer></script>
     
 </head>
@@ -41,11 +42,11 @@
     <section class="marginForm">
         <div class="row">
             <div class="col">
-                <h1 id="contactado"></h1>
+                <h1 class="centrado">Deje sus datos y lo contactaremos!</h1>
                 <form id="formularioCliente">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Nombre completo</label>
-                        <input type="name" name="nombreCliente" class="form-control" id="exampleInputEmail1"
+                        <input type="name" name="nombreCliente" class="form-control" id="nombre"
                             aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
