--- a/packs.html
+++ b/packs.html
@@ -13,6 +13,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="typed.js"></script>
     <script src="indexJS.js" defer></script>
 
 </head>
