--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md 6">
                 <div class="div">
-                    <img class="fotoCard" src="FotoCard.jpg" alt="">
+                    <!-- <img class="fotoCard" src="FotoCard.jpg" alt=""> -->
                 </div>
             </div>
             <div  id="titulo" class="col-md-6">
@@ -62,7 +62,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
     <script src="typed.js"></script>
-    <script src="indexJS.js"></script>
+    <script src="typedEnIndex.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
